kubernetes-dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: 'funixproductions-dev'
  name: funixproductions-dev-api-ingress
  annotations:
    spec.ingressClassName: traefik
spec:
  tls:
    - secretName: funixproductions-dev-api-certificate-tls
  rules:
    - host: dev.api.funixproductions.com
      http:
        paths:

          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 80

          - path: /billing
            pathType: Prefix
            backend:
              service:
                name: payment-billing
                port:
                  number: 80

          - path: /twitch/auth
            pathType: Prefix
            backend:
              service:
                name: twitch-auth
                port:
                  number: 80

          - path: /twitch/eventsub
            pathType: Prefix
            backend:
              service:
                name: twitch-eventsub
                port:
                  number: 80

          - path: /google/auth
            pathType: Prefix
            backend:
              service:
                name: google-auth
                port:
                  number: 80
